--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Mama_ne_vdoma" parent="android:Theme.Material.Light.NoActionBar" />
-
+    <style name="Theme.Mama_ne_vdoma" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+    
     <!-- Splash -->
     <style name="Theme.Mama_ne_vdoma.Starting" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/white</item>
